<resources>
    <string name="app_name">Chat Bot Sağlık</string>
    <string name="i_have_account">Hesabım Var</string>
    <string name="login_home_text">Hesabımla Giriş Yap</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="register_username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="register_create_account_button">Hesap Oluştur</string>
    <string name="login">Giriş Yap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">istekler fragment</string>


</resources>